--- a/notebooks/2.debugger.ipynb
+++ b/notebooks/2.debugger.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Debugger Notebook\n",
+    "\n",
+    "This notebook is to vizualize the raw data fetched from the NHL, it is meant as a debugging tool"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "class Data:\n",
@@ -29,7 +40,7 @@
     "    _data: dict = None\n",
     "\n",
     "    def set(self, year, game_id, play_id):\n",
-    "        # only load large json data (>100MB) of needed\n",
+    "        # only load large json data (>100MB) if needed\n",
     "        if year != self.year:\n",
     "            with open(f'../data/raw/{year}.json', 'r') as f:\n",
     "                self._data = json.load(f)\n",
@@ -58,7 +69,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "def draw_rink(path='../figures/nhl_rink.png'):\n",
+    "    img_data = plt.imread(path)\n",
+    "    plt.imshow(img_data, extent=[-100,100,-42.5,42.5])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "def draw_circle(ax) -> plt.Circle:\n",
+    "    circle = plt.Circle((0,0), 2.5, color='r')\n",
+    "    ax.add_patch(circle)\n",
+    "    return circle"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -71,7 +109,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='b84d318b-2ce0-4ba0-9606-baa61a2410fd'></div>"
+      "text/html": "<div id='9a575f6c-e4ce-4662-84fa-5ef3d238c595'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -82,7 +120,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c423b54d38624bb984722fb3eaf72b6a"
+       "model_id": "11a8a19fc6f94218b181ec60368938b2"
       }
      },
      "metadata": {},
@@ -93,12 +131,8 @@
     "%matplotlib notebook\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "img_data = plt.imread('../figures/nhl_rink.png')\n",
-    "img = plt.imshow(img_data, extent=[-100,100,-42.5,42.5])\n",
-    "\n",
-    "circle = plt.Circle((0,0), 5, color='r')\n",
-    "ax.add_patch(circle)\n",
-    "\n",
+    "draw_rink()\n",
+    "circle = draw_circle(ax)\n",
     "data = Data()\n",
     "\n",
     "@interact(\n",
