--- a/notebooks/7.advanced-models.ipynb
+++ b/notebooks/7.advanced-models.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Advanced models\n",
+    "\n",
+    "Notebook to showcase the evaluatio of all models within our pipeline"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bb75604a",
@@ -10,7 +21,11 @@
     "from ift6758.pipeline import ExperimentPipeline, DEFAULT_TRANSFORMATIONS\n",
     "from ift6758.pipeline.plots import plot_all\n",
     "\n",
-    "from xgboost import XGBClassifier"
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -34,13 +49,14 @@
       "applying append_rebound\n",
       "applying append_angle_change\n",
       "applying append_speed\n",
+      "applying replace_nan_by_0_2\n",
       "done with preprocessing\n"
      ]
     },
     {
      "data": {
-      "text/plain": "   Unnamed: 0        game_starttime          game_endtime  game_id  \\\n0           0  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n1           1  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n2           2  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n3           3  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n4           4  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n\n               datetime  offense_team_id    offense_team_name  \\\n0  2016-10-12T23:19:59Z               10  Toronto Maple Leafs   \n1  2016-10-12T23:21:41Z                9      Ottawa Senators   \n2  2016-10-12T23:23:17Z                9      Ottawa Senators   \n3  2016-10-12T23:24:02Z                9      Ottawa Senators   \n4  2016-10-12T23:27:30Z               10  Toronto Maple Leafs   \n\n  offense_team_tricode  goal  x_coords  ...  strength_powerplay    season  \\\n0                  TOR     0      77.0  ...                 0.0  20162017   \n1                  OTT     0      86.0  ...                 0.0  20162017   \n2                  OTT     0      23.0  ...                 0.0  20162017   \n3                  OTT     0      33.0  ...                 0.0  20162017   \n4                  TOR     0      34.0  ...                 0.0  20162017   \n\n  shot_angle  shot_distance game_secs  time_lapsed_prev_event_in_seconds  \\\n0  67.380135      13.000000        71                                  0   \n1  12.994617      13.341664       173                                  0   \n2  60.068488      76.157731       241                                 18   \n3  75.004921      57.974132       286                                 19   \n4  63.019769      61.717096       406                                 15   \n\n  dist_prev_event rebound angle_change     speed  \n0      138.924440   False          0.0 -1.000000  \n1       36.715120   False          0.0 -1.000000  \n2      102.318131   False          0.0  5.684341  \n3       45.880279   False          0.0  2.414752  \n4       63.348244   False          0.0  4.223216  \n\n[5 rows x 35 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>game_starttime</th>\n      <th>game_endtime</th>\n      <th>game_id</th>\n      <th>datetime</th>\n      <th>offense_team_id</th>\n      <th>offense_team_name</th>\n      <th>offense_team_tricode</th>\n      <th>goal</th>\n      <th>x_coords</th>\n      <th>...</th>\n      <th>strength_powerplay</th>\n      <th>season</th>\n      <th>shot_angle</th>\n      <th>shot_distance</th>\n      <th>game_secs</th>\n      <th>time_lapsed_prev_event_in_seconds</th>\n      <th>dist_prev_event</th>\n      <th>rebound</th>\n      <th>angle_change</th>\n      <th>speed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:19:59Z</td>\n      <td>10</td>\n      <td>Toronto Maple Leafs</td>\n      <td>TOR</td>\n      <td>0</td>\n      <td>77.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>67.380135</td>\n      <td>13.000000</td>\n      <td>71</td>\n      <td>0</td>\n      <td>138.924440</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>-1.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:21:41Z</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>86.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>12.994617</td>\n      <td>13.341664</td>\n      <td>173</td>\n      <td>0</td>\n      <td>36.715120</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>-1.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:23:17Z</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>23.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>60.068488</td>\n      <td>76.157731</td>\n      <td>241</td>\n      <td>18</td>\n      <td>102.318131</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>5.684341</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:24:02Z</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>33.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>75.004921</td>\n      <td>57.974132</td>\n      <td>286</td>\n      <td>19</td>\n      <td>45.880279</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>2.414752</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:27:30Z</td>\n      <td>10</td>\n      <td>Toronto Maple Leafs</td>\n      <td>TOR</td>\n      <td>0</td>\n      <td>34.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>63.019769</td>\n      <td>61.717096</td>\n      <td>406</td>\n      <td>15</td>\n      <td>63.348244</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>4.223216</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 35 columns</p>\n</div>"
+      "text/plain": "   Unnamed: 0        game_starttime          game_endtime  game_id  \\\n0           0  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n1           1  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n2           2  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n3           3  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n4           4  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z        0   \n\n               datetime  offense_team_id    offense_team_name  \\\n0  2016-10-12T23:19:59Z               10  Toronto Maple Leafs   \n1  2016-10-12T23:21:41Z                9      Ottawa Senators   \n2  2016-10-12T23:23:17Z                9      Ottawa Senators   \n3  2016-10-12T23:24:02Z                9      Ottawa Senators   \n4  2016-10-12T23:27:30Z               10  Toronto Maple Leafs   \n\n  offense_team_tricode  goal  x_coords  y_coords  period period_time  \\\n0                  TOR     0      77.0      -5.0       1       01:11   \n1                  OTT     0      86.0      13.0       1       02:53   \n2                  OTT     0      23.0     -38.0       1       04:01   \n3                  OTT     0      33.0     -15.0       1       04:46   \n4                  TOR     0      34.0     -28.0       1       06:46   \n\n   goalie_id        goalie_name  shooter_id     shooter_name   shot_type  \\\n0    8467950     Craig Anderson     8478483  Mitchell Marner  Wrist Shot   \n1    8475883  Frederik Andersen     8467967      Chris Kelly  Wrist Shot   \n2    8475883  Frederik Andersen     8476879        Cody Ceci  Wrist Shot   \n3    8475883  Frederik Andersen     8474578    Erik Karlsson   Slap Shot   \n4    8467950     Craig Anderson     8475716  Martin Marincin  Wrist Shot   \n\n      prev_type  prev_x_coords  prev_y_coords         prev_datetime empty_net  \\\n0  Blocked Shot          -61.0           11.0  2016-10-12T23:19:59Z     False   \n1      Giveaway           54.0           -5.0  2016-10-12T23:21:41Z     False   \n2   Missed Shot          -72.0            0.0  2016-10-12T23:22:59Z     False   \n3   Missed Shot           77.0           -2.0  2016-10-12T23:23:43Z     False   \n4           Hit           47.0           34.0  2016-10-12T23:27:15Z     False   \n\n   strength_shorthand  strength_even  strength_powerplay    season  \\\n0                 0.0            0.0                 0.0  20162017   \n1                 0.0            0.0                 0.0  20162017   \n2                 0.0            0.0                 0.0  20162017   \n3                 0.0            0.0                 0.0  20162017   \n4                 0.0            0.0                 0.0  20162017   \n\n   shot_angle  shot_distance  game_secs  time_lapsed_prev_event_in_seconds  \\\n0   67.380135      13.000000         71                                  0   \n1   12.994617      13.341664        173                                  0   \n2   60.068488      76.157731        241                                 18   \n3   75.004921      57.974132        286                                 19   \n4   63.019769      61.717096        406                                 15   \n\n   dist_prev_event  rebound  angle_change     speed  \n0       138.924440    False           0.0 -1.000000  \n1        36.715120    False           0.0 -1.000000  \n2       102.318131    False           0.0  5.684341  \n3        45.880279    False           0.0  2.414752  \n4        63.348244    False           0.0  4.223216  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>game_starttime</th>\n      <th>game_endtime</th>\n      <th>game_id</th>\n      <th>datetime</th>\n      <th>offense_team_id</th>\n      <th>offense_team_name</th>\n      <th>offense_team_tricode</th>\n      <th>goal</th>\n      <th>x_coords</th>\n      <th>y_coords</th>\n      <th>period</th>\n      <th>period_time</th>\n      <th>goalie_id</th>\n      <th>goalie_name</th>\n      <th>shooter_id</th>\n      <th>shooter_name</th>\n      <th>shot_type</th>\n      <th>prev_type</th>\n      <th>prev_x_coords</th>\n      <th>prev_y_coords</th>\n      <th>prev_datetime</th>\n      <th>empty_net</th>\n      <th>strength_shorthand</th>\n      <th>strength_even</th>\n      <th>strength_powerplay</th>\n      <th>season</th>\n      <th>shot_angle</th>\n      <th>shot_distance</th>\n      <th>game_secs</th>\n      <th>time_lapsed_prev_event_in_seconds</th>\n      <th>dist_prev_event</th>\n      <th>rebound</th>\n      <th>angle_change</th>\n      <th>speed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:19:59Z</td>\n      <td>10</td>\n      <td>Toronto Maple Leafs</td>\n      <td>TOR</td>\n      <td>0</td>\n      <td>77.0</td>\n      <td>-5.0</td>\n      <td>1</td>\n      <td>01:11</td>\n      <td>8467950</td>\n      <td>Craig Anderson</td>\n      <td>8478483</td>\n      <td>Mitchell Marner</td>\n      <td>Wrist Shot</td>\n      <td>Blocked Shot</td>\n      <td>-61.0</td>\n      <td>11.0</td>\n      <td>2016-10-12T23:19:59Z</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>67.380135</td>\n      <td>13.000000</td>\n      <td>71</td>\n      <td>0</td>\n      <td>138.924440</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>-1.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:21:41Z</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>86.0</td>\n      <td>13.0</td>\n      <td>1</td>\n      <td>02:53</td>\n      <td>8475883</td>\n      <td>Frederik Andersen</td>\n      <td>8467967</td>\n      <td>Chris Kelly</td>\n      <td>Wrist Shot</td>\n      <td>Giveaway</td>\n      <td>54.0</td>\n      <td>-5.0</td>\n      <td>2016-10-12T23:21:41Z</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>12.994617</td>\n      <td>13.341664</td>\n      <td>173</td>\n      <td>0</td>\n      <td>36.715120</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>-1.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:23:17Z</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>23.0</td>\n      <td>-38.0</td>\n      <td>1</td>\n      <td>04:01</td>\n      <td>8475883</td>\n      <td>Frederik Andersen</td>\n      <td>8476879</td>\n      <td>Cody Ceci</td>\n      <td>Wrist Shot</td>\n      <td>Missed Shot</td>\n      <td>-72.0</td>\n      <td>0.0</td>\n      <td>2016-10-12T23:22:59Z</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>60.068488</td>\n      <td>76.157731</td>\n      <td>241</td>\n      <td>18</td>\n      <td>102.318131</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>5.684341</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:24:02Z</td>\n      <td>9</td>\n      <td>Ottawa Senators</td>\n      <td>OTT</td>\n      <td>0</td>\n      <td>33.0</td>\n      <td>-15.0</td>\n      <td>1</td>\n      <td>04:46</td>\n      <td>8475883</td>\n      <td>Frederik Andersen</td>\n      <td>8474578</td>\n      <td>Erik Karlsson</td>\n      <td>Slap Shot</td>\n      <td>Missed Shot</td>\n      <td>77.0</td>\n      <td>-2.0</td>\n      <td>2016-10-12T23:23:43Z</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>75.004921</td>\n      <td>57.974132</td>\n      <td>286</td>\n      <td>19</td>\n      <td>45.880279</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>2.414752</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>2016-10-12T23:00:00Z</td>\n      <td>2016-10-13T01:56:40Z</td>\n      <td>0</td>\n      <td>2016-10-12T23:27:30Z</td>\n      <td>10</td>\n      <td>Toronto Maple Leafs</td>\n      <td>TOR</td>\n      <td>0</td>\n      <td>34.0</td>\n      <td>-28.0</td>\n      <td>1</td>\n      <td>06:46</td>\n      <td>8467950</td>\n      <td>Craig Anderson</td>\n      <td>8475716</td>\n      <td>Martin Marincin</td>\n      <td>Wrist Shot</td>\n      <td>Hit</td>\n      <td>47.0</td>\n      <td>34.0</td>\n      <td>2016-10-12T23:27:15Z</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>20162017</td>\n      <td>63.019769</td>\n      <td>61.717096</td>\n      <td>406</td>\n      <td>15</td>\n      <td>63.348244</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>4.223216</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -57,8 +73,17 @@
    "id": "71591762",
    "metadata": {},
    "source": [
-    "**QUESTION 5.1**"
+    "## XGBoost"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Limited Features"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -187,7 +212,7 @@
    "id": "79bdaead",
    "metadata": {},
    "source": [
-    "**QUESTION 5.2**"
+    "### All features"
    ]
   },
   {
@@ -374,7 +399,7 @@
    "id": "c185140b",
    "metadata": {},
    "source": [
-    "**QUESTION 5.3**"
+    "### Feature Selection"
    ]
   },
   {
